# Shikaku-Puzzle

./: .gitignore  CMakeLists.txt  README.md
docs/: implementation_plan.md
include/: Board.h  Counter.h
src/: Board.cpp  Board.h  Cell.cpp  Cell.h  Game.cpp  Game.h  Input.cpp  Input.h  PuzzleGen.cpp  PuzzleGen.h  Rectangle.cpp  Rectangle.h  Solver.cpp  Solver.h  main.cpp
tests/: test_counter.cpp  test_main.cpp
